--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
