--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "proseWrap": "always",
   "semi": false,
   "trailingComma": "all",
-  "singleQuote": true
+  "singleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
