--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.6.3",
