--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@next/third-parties": "^15.4.0-canary.51",
     "@radix-ui/react-slot": "^1.2.2",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.6.3",
-    "next": "^15.2.4",
+    "next": "^15.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.1.0"
